Added light bulbs

--- a/CortanaLightSwitch/CortanaLightSwitch.csproj
+++ b/CortanaLightSwitch/CortanaLightSwitch.csproj
@@ -100,14 +100,18 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="CortanaLightSwitch_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\bulb-off.png" />
+    <Content Include="Assets\bulb-on.png" />
     <Content Include="CortanaLightSwitchCommands.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -129,11 +133,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Thepagedot.Rhome.Base">
-      <HintPath>D:\Source\Thepagedot\Rhome\HomeControl\Thepagedot.Rhome.Base\bin\Debug\Thepagedot.Rhome.Base.dll</HintPath>
-    </Reference>
+    <Page Include="SettingsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
