Switching and Settings work now

--- a/CortanaLightSwitch/CortanaLightSwitch.csproj
+++ b/CortanaLightSwitch/CortanaLightSwitch.csproj
@@ -96,6 +96,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="HomeMaticTools.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -114,6 +115,7 @@
     <Content Include="Assets\bulb-on.png" />
     <Content Include="CortanaLightSwitchCommands.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
